# DORO-STVG

./: .gitignore  README.md  data_engine.drawio  pyproject.toml  showcase.drawio
envs/eval/: pyproject.toml
envs/eval/cgstvg/: pyproject.toml
envs/eval/devil/: pyproject.toml
envs/eval/grounded_video_llm/: pyproject.toml
envs/eval/groundinggpt/: pyproject.toml
envs/eval/llava16/: pyproject.toml
envs/eval/llava_onevision/: pyproject.toml
envs/eval/llava_onevision1.5/: pyproject.toml
envs/eval/llavast/: pyproject.toml
envs/eval/qwen/: pyproject.toml
envs/eval/qwen_internvl/: pyproject.toml
envs/eval/stvg_r1/: pyproject.toml
envs/eval/tastvg/: pyproject.toml
envs/eval/tubedetr/: pyproject.toml
envs/eval/videochat_r1/: pyproject.toml
envs/eval/videomolmo/: pyproject.toml
envs/eval/vtimellm/: pyproject.toml
envs/graph_generator/action_detector/: pyproject.toml
envs/graph_generator/main/: pyproject.toml
eval/: MIGRATION_GUIDE.md  README.md  main.py  prompts.py  pyproject.toml  run_eval.sh  runner.py  temporal_main.py  temporal_prompts.py
eval/cankao/: hcstvg_eval.py  viderthinker_eval.py  vidstg_eval.py
eval/config/: hcstvg_qwen.yaml  vidstg_qwen.yaml
eval/core/: __init__.py  schema.py
eval/dataset_registry/: __init__.py  base_dataset.py  hcstvg_dataset.py  registry.py  vidstg_dataset.py
eval/dependence/: __init__.py
eval/dependence/cgstvg/: __init__.py
eval/dependence/llavast/: __init__.py  pyproject.toml
eval/dependence/llavast/inference/: __init__.py
eval/dependence/llavast/inference/src/: datasets.py
eval/dependence/llavast/llava/model/: llava_arch.py  llava_arch.py.bak.2026-04-21_125429  llava_arch.py.bak.2026-04-21_125440  llava_arch.py.bak.2026-04-21_132849  llava_arch.py.bak.2026-04-21_132908  llava_arch.py.bak.2026-04-21_135433  llava_arch.py.bak.2026-04-21_181607  llava_arch.py.bak.2026-04-21_181800
eval/dependence/llavast/llava/model/multimodal_resampler/: qformer.py
eval/evaluator/: __init__.py  metrics.py  stvg_evaluator.py
eval/model_registry/: __init__.py  base_model.py  qwen_family.py  registry.py
eval/models/: __init__.py  cgstvg.py  devil.py  grounded_video_llm.py  groundinggpt.py  groundingpt.py  internvl_family.py  llava16.py  llava_family.py  llava_st.py  qwen.py  qwen_family.py  stvg_adapter_utils.py  stvg_r1.py  tastvg.py  tubedetr.py  videochat_r1.py  videomolmo.py  vtimellm.py
eval/pipelines/: base_pipeline.py  doro_temporal.py  dorostvg.py  hcstvg.py  llavast_chunked.py  stalign.py  vidstg.py
eval/prompts/: __init__.py  stvg.py
eval/scripts/: recompute_single_run_difficulty_3level.py  run_all_models.sh  run_cgstvg.sh  run_devil.sh  run_grounded_video_llm.sh  run_grounded_video_llm_llama3.sh  run_grounded_video_llm_temporal.sh  run_groundinggpt.sh  run_groundinggpt_direct.sh  run_internvl.sh  run_llava16.sh  run_llava_next_video.sh  run_llava_onevision.sh  run_llavast.sh  run_qwen.sh  run_stvg_r1.sh  run_tastvg.sh  run_tubedetr.sh  run_videochat_r1.sh  run_videomolmo.sh  run_vtimellm.sh  run_vtimellm_temporal.sh  setup_llavast_env.sh
eval/tests/: test_base_pipeline.py  test_model_imports.py  test_prompts.py  test_temporal_eval.py
eval/utils/: cgstvg_infer_helper.py  cgstvg_infer_util.py  convert_doro_to_cgstvg_vidstg.py  convert_doro_to_tastvg_vidstg.py  devil_worker.py  grounded_video_llm_worker.py  groundinggpt_direct_eval.py  llavast_split_chunks.py  metrics.py  stvg_video_utils.py  tastvg_infer_helper.py  tastvg_infer_util.py  temporal_metrics.py  tubedetr_infer_helper.py  tubedetr_infer_util.py  video_loader.py
graph_generator/: CLAUDE.md  README.md  README.zh.md  graph_generator.py  main.py  pyproject.toml  query_generator.py  requirements_action.txt  run_generator.sh  run_test_scene_detector.py  run_visualizer.sh  sam3_segmentor.py  scene_detector.py  scene_graphs.jsonl  scene_graphs.normcheck.jsonl  scene_graphs_filtered.jsonl  yolo_tracker.py
graph_generator/GroundedSAM2/sam2/: build_sam.py
graph_generator/api_sync/api/: async_pool.py  gemini_wrapper.py  stream_generator.py  vision_utils.py  wrapper.py
graph_generator/dependence/: __init__.py
graph_generator/dependence/mmaction2/: .gitignore  __init__.py
graph_generator/dependence/mmaction2/configs/detection/videomae/: vit-large-p16_videomae-k400-pre_8xb8-16x4x1-20e-adamw_ava-kinetics-rgb.py
graph_generator/mmaction/: __init__.py
graph_generator/modules/: action_detector.py  attribute_generator.py  graph_filter.py  groundingedsam2_tracker.py  keyframe_clustering.py  query_generator.py  query_generator_base.py  query_generator_cpsat.py  query_generator_cpsat_autoresearch.md  query_generator_minimal.py  reference_edge_generator.py  relation_generator.py  sam3_text_only_test.py  sam3_tracker.py  scene_detector.py  yolo_detector.py  yolo_tracker.py
graph_generator/modules/query_generator/: __init__.py  clues.py  data_models.py  difficulty.py  graph_index.py  indexing.py  intervals.py  polish.py  rendering.py  sampler.py  solver.py  templates.py  text_utils.py
graph_generator/modules/query_generator/baseline/: __init__.py  _common.py  benchmark.py  greedy_solver.py  ilp_solver.py  query_generator_base.py  random_solver.py
graph_generator/outputs/baselines/: run_20260521_223456.json
graph_generator/scripts/: export_groundedsam2_masks.py  run_baseline_benchmark.sh  run_encode.sh  run_formatted.sh  run_generator.sh  run_generator_debug.sh  run_query_generator.sh  run_reencode.sh  run_visualizer.sh  test_sam2_auto_tracker.py
graph_generator/tests/: test_format_sft.py  test_frames_to_video.py  test_query_generator_cpsat_difficulty.py  test_query_generator_cpsat_round19.py
graph_generator/utils/: format_query_jsonl.py  format_sft.py  format_train.py  frames_to_video.py  graph_visualizer.py  hc_stvg_visualizer.py  query_web_viewer.py  run.sh  video_reencode.py  vidstg_visualizer.py  visualizer.py
res/hcstvg_Qwen3-VL-8B/: results.json  status.json
trainer/Automodel/: .pre-commit-config.yaml  AGENTS.md  README.md  app.py  codecov.yml  pyproject.toml  slurm.sub
utils/: process_video.py  stvg_video_utils.py
(+1049 files in other folders)
