[project]
name = "doro-stvg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decord>=0.6.0",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "vllm>=0.11.2",
]
