[project]
name = "graph-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "decord>=0.6.0",
    "einops>=0.8.2",
    "fire>=0.7.1",
    "ftfy>=6.3.1",
    "huggingface-hub>=0.36.0",
    "iopath>=0.1.10",
    "kernels>=0.11.3",
    "lap>=0.5.12",
    "opencv-python>=4.12.0.88",
    "pycocotools>=2.0.11",
    "scenedetect>=0.6.7.1",
    "scikit-learn>=1.8.0",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "typing-extensions>=4.15.0",
    "ultralytics>=8.4.6",
]

