[project]
name = "eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "decord>=0.6.0",
   "fire>=0.7.1",
   "qwen-vl-utils>=0.0.14",
   "transformers>=4.57.6",
   "vllm>=0.19.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.workspace]
members = [
    "graph_generator",
]
