[project]
name = "eval-cgstvg"
version = "0.1.0"
description = "Lightweight evaluation wrapper environment for CG-STVG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.2.4",
    "easydict>=1.13",
    "einops>=0.7.0,<0.9",
    "ffmpeg-python>=0.2.0",
    "fire>=0.7.1",
    "ftfy>=6.1.3,<7",
    "opencv-python==4.11.0.86",
    "packaging==21.3",
    "pillow==10.3.0",
    "pytorch-pretrained-bert>=0.6.2",
    "scipy>=1.13,<1.15",
    "tensorboard>=2.17,<2.19",
    "timm==0.9.16",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchtext==0.15.2",
    "torchvision==0.15.2",
    "tqdm>=4.66.5,<5",
    "transformers==4.30.2",
    "yacs>=0.1.8,<0.2",
    "numpy<2",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
