[project]
name = "devil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "MultiScaleDeformableAttention",
    "accelerate==1.0.1",
    "decord==0.6.0",
    "easydict>=1.13",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "ffmpeg-python>=0.2.0",
    "fire>=0.7.1",
    "flash-attn",
    "huggingface-hub==0.23.4",
    "imageio==2.34.0",
    "loralib>=0.1.2",
    "matplotlib>=3.10.9",
    "numpy==1.24.4",
    "opencv-python==4.6.0.66",
    "peft==0.4.0",
    "pycocotools>=2.0.11",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "ruamel-yaml>=0.19.1",
    "scipy>=1.15.3",
    "sentencepiece==0.1.99",
    "timm==1.0.3",
    "tokenizers==0.20.3",
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
    "transformers==4.46.3",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64' and python_full_version >= '3.11'"]

[tool.uv.extra-build-dependencies]
multiscaledeformableattention = ["setuptools>=40.8.0", "torch", "torchvision"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
flash-attn = { url = "https://gh-proxy.org/https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu128torch2.9-cp311-cp311-linux_x86_64.whl" }
MultiScaleDeformableAttention = { path = "../../../eval/dependence/devil/devil/model/g_dino/GroundingDINO/ops" }
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
