[project]
name = "eval-grounded-video-llm"
version = "0.1.0"
description = "Evaluation environment for Grounded-VideoLLM adapter"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.13.0",
    "av>=12.0.0",
    "decord>=0.6.0",
    "einops>=0.8.2",
    "fire>=0.7.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "peft==0.3.0",
    "pillow>=12.2.0",
    "sentencepiece>=0.2.1",
    "timm>=1.0.27",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "transformers==4.40.1",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
