[project]
name = "eval-groundinggpt"
version = "0.1.0"
description = "Evaluation wrapper environment for GroundingGPT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "accelerate==0.23.0",
   "decord>=0.6.0",
   "deepspeed>=0.19.0",
   "einops>=0.8.2",
   "fastapi>=0.136.1",
   "fire>=0.7.1",
   "ftfy>=6.3.1",
   "gradio==3.23",
   "httpx==0.23.0",
   "huggingface-hub==0.16.4",
   "iopath>=0.1.10",
   "librosa>=0.11.0",
   "markdown2[all]>=2.5.5",
   "ninja>=1.13.0",
   "numpy>=1.26.4",
   "omegaconf>=2.3.0",
   "opencv-python>=4.11.0.86",
   "peft==0.6.2",
   "prettytable>=3.17.0",
   "pycocotools>=2.0.11",
   "pytorchvideo>=0.1.5",
   "requests>=2.34.2",
   "scikit-image>=0.26.0",
   "sentencepiece>=0.2.1",
   "timm>=1.0.27",
   "tokenizers==0.14.0",
   "torch==2.0.1",
   "torchaudio==2.0.2",
   "torchvision==0.15.2",
   "transformers==4.34.0",
   "uvicorn>=0.47.0",
   "wandb>=0.27.0",
   "webdataset>=1.0.2",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
