[project]
name = "eval-llava16"
version = "0.1.0"
description = "Evaluation environment for LLaVA-1.6 via vLLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "decord>=0.6.0",
   "fire>=0.7.1",
   "pillow>=10.3.0",
   "transformers>=4.57.6",
   "vllm==0.19.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
