[project]
name = "llava-onevision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.9.0",
    "datasets==2.19.2",
    "decord>=0.6.0",
    "einops==0.6.0",
    "fire>=0.7.1",
    "ftfy==6.1.3",
    "hydra-core==1.3.2",
    "jsonlines==4.0.0",
    "mdformat==1.0.0",
    "mdformat-gfm==1.0.0",
    "mdformat-pyproject==0.1.1",
    "megatron-energon==5.0.0",
    "nltk==3.9.1",
    "omegaconf==2.3.0",
    "pandarallel==1.6.5",
    "pre-commit==3.2.2",
    "protobuf==3.20.2",
    "py-cpuinfo==9.0.0",
    "qwen-vl-utils>=0.0.14",
    "sentencepiece==0.1.98",
    "tiktoken==0.5.2",
    "timm==1.0.3",
    "transformers==5.7.0",
    "wandb==0.21.0",
    "wrapt==1.16.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
