[project]
name = "eval-llavast"
version = "0.1.0"
description = "Evaluation environment for LLaVA-ST"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "llava",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "transformers @ git+https://github.com/huggingface/transformers.git@1c39974a4c4036fd641bc1191cc32799f85715a4",
    "accelerate==0.29.3",
    "av>=12.0.0",
    "decord==0.6.0",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "fire>=0.7.1",
    "numpy==1.26.4",
    "open-clip-torch==2.24.0",
    "peft==0.4.0",
    "pillow==10.3.0",
    "sentencepiece==0.1.99",
    "timm==0.9.16",
    "tokenizers==0.15.2",
    "black==24.1.0",
    "flake8>=7.0.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
llava = { path = "../../../eval/dependences/LLaVAST", editable = true }
