[project]
name = "qwen_internvl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "decord>=0.6.0",
   "fire>=0.7.1",
   "qwen-vl-utils>=0.0.14",
   "timm>=1.0.27",
   "transformers>=4.53.2",
   "vllm>=0.19.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

