[project]
name = "eval-stvg-r1"
version = "0.1.0"
description = "Evaluation environment for STVG-R1 via Qwen2.5-VL/vLLM"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
   "decord>=0.6.0",
   "fire>=0.7.1",
   "pillow>=10.3.0",
   "qwen-vl-utils>=0.0.14",
   "transformers>=4.56.0,<5",
   "vllm==0.19.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
