[project]
name = "eval-videomolmo"
version = "0.1.0"
description = "Evaluation environment for VideoMolmo adapter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "fire>=0.7.1",
   "pillow>=10.3.0",
]

[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
