[project]
name = "action-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "addict>=2.4.0",
    "certifi>=2022.12.7",
    "charset-normalizer>=2.1.1",
    "cmake>=3.25.0",
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "decord>=0.6.0",
    "einops>=0.8.2",
    "filelock>=3.19.1",
    "fire>=0.7.1",
    "fonttools>=4.60.2",
    "idna>=3.4",
    "jinja2>=3.1.6",
    "kiwisolver>=1.4.7",
    "lit>=15.0.7",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.9.4",
    "mdurl>=0.1.2",
    "mmcv==2.0.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.7",
    "mpmath>=1.3.0",
    "networkx>=3.2.1",
    "numpy==1.26.4",
    "opencv-contrib-python==4.8.1.78",
    "opencv-python==4.8.1.78",
    "packaging>=24.1",
    "pillow>=11.3.0",
    "platformdirs>=4.4.0",
    "pycocotools>=2.0.11",
    "pygments>=2.20.0",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.28.1",
    "rich>=14.3.3",
    "scipy>=1.13.1",
    "shapely>=2.0.7",
    "six>=1.17.0",
    "sympy>=1.14.0",
    "termcolor>=3.1.0",
    "terminaltables>=3.1.10",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm>=4.66.5",
    "triton>=2.0.0",
    "typing-extensions>=4.15.0",
    "urllib3>=1.26.13",
    "yapf>=0.43.0",
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"

[[tool.uv.index]]
name = "openmmlab-mmcv"
url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0/index.html"
format = "flat"
explicit = true

[tool.uv.sources]
mmcv = { index = "openmmlab-mmcv" }
